test(task-manager): без дублей в истории; история >10; удаление чистит историю